tests/check_tests/parse_errors/missing_header.roc
# Minimal test file
x = 42
